@@ -63,6 +63,7 @@ Alt-1		sound_tester
 Ctrl-B		shape_browser
 B		useitem			761	# Show spellbook
 INSERT		create_item		-1	# Create last shape
+Alt-V		create_item		-1	# Create last shape
 C		toggle_combat
 SPACE		pause_combat
 Ctrl-D		delete_object
